--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -6,24 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas\n",
+    "import numpy"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.2 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.7"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "19bea728ebfbcda5dcde7dd88f839cae5267f6814939d7595879f90567282a06"
    }
   }
  },
