--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas\n",
-    "import numpy"
+    "import numpy\n",
+    "\n",
+    "#hola jaime"
    ]
   }
  ],
