--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -9,24 +9,25 @@
     "import pandas\n",
     "import numpy\n",
     "\n",
-    "#hola jaime"
+    "#hola jaime\n",
+    "#hola benja"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.2 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "19bea728ebfbcda5dcde7dd88f839cae5267f6814939d7595879f90567282a06"
+    "hash": "d738dc81e616a69fee448fae558823803445c88ba1c261e3b2c1ba783fd18d47"
    }
   }
  },
