--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -10,7 +10,8 @@
     "import numpy\n",
     "\n",
     "#hola jaime\n",
-    "#hola benja"
+    "#hola benja\n",
+    "#hola camila"
    ]
   }
  ],
