Agregué la interpretación al usar K-means

--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -809,6 +809,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlaciones a destacar: ONEOFF_PURCHASES - PURCHASES (0.92), PUCHASES_INSTALLMENTS_FREQUENCY - PURCHASES_FREQUENCY (0.86) y CASH_ADVANCE_TRX - CASH_ADVANCE_FREQUENCY (0.8) Es decir, ninguna contraintuitiva."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 306,
    "metadata": {},
