Agregué interpretación K-MEANS

--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -2421,7 +2421,7 @@
    "source": [
     "BALANCE: El cluster 0 tiene una menor media y desviación estándar de BALANCE con respecto a los otros dos clusters, por lo que se puede concluir que en el cluster 0 están los clientes con menor BALANCE. Siendo la media y desviación estándar entre cluster 1 y 2 similares.\n",
     "\n",
-    "BALANCE_FREQUENCY: El cluster 0 tiene mayor media y desviación estándar de BALANCE_FREQUENCY respecto a los otros dos clusters, por lo que se puede concluir que en el cluster 0 están los clientes con gran BALANCE_FREQUENCY. Siendo la media y desviación estándar entre cluster 1 y 2 similares.\n",
+    "BALANCE_FREQUENCY: El cluster 0 tiene menor media y mayor desviación estándar de BALANCE_FREQUENCY respecto a los otros dos clusters. Siendo la media y desviación estándar entre cluster 1 y 2 similares.\n",
     "\n",
     "PURCHASES: El cluster 1 tiene mayor media y desviación estándar de PURCHASES respecto a los otros dos clusters, por lo que se puede concluir que en el cluster 1 están los clientes con mayor PURCHASES. Siendo la media y desviación estándar entre cluster 0 y 2 similares.\n",
     "\n",
@@ -2460,9 +2460,9 @@
    "source": [
     "CONCLUSIÓN RESPECTO A CADA CLUSTER:\n",
     "\n",
-    "CLUSTER 0 : Clientes con poco BALANCE, alta BALANCE_FREQUENCY, bajo CREDIT_LIMIT y bajo PAYMENTS.\n",
+    "CLUSTER 0 : Clientes con poco BALANCE, baja BALANCE_FREQUENCY, bajo CREDIT_LIMIT y bajo PAYMENTS.\n",
     "\n",
-    "Esto es, son clientes cuyo balance es bajo y que cambia con frecuencia a lo largo del tiempo, además de tener poco límite de crédito y un monto pequeño de pagos realizados. Se podría decir que son clientes poco activos y quizás no muy pudientes económicamente.\n",
+    "Esto es, son clientes cuyo balance es bajo y que no cambia con frecuencia a lo largo del tiempo, además de tener poco límite de crédito y un monto pequeño de pagos realizados. Se podría decir que son clientes poco activos y quizás no muy pudientes económicamente.\n",
     "\n",
     "Cluster 1 : Clientes con alto PURCHASES, ONEOFF_PURCHASES, INSTALLEMNTS_PURCHASES, PURCHASES_FREQUENCY, ONEOFF_PURCHASES_FREQUENCY, PURCHASE_INSTALLMENTS_FREQUENCY, PURCHASES_TRX y TENURE.\n",
     "\n",
