--- a/proyecto-mineria-grupo-5.ipynb
+++ b/proyecto-mineria-grupo-5.ipynb
@@ -2460,9 +2460,9 @@
    "source": [
     "CONCLUSIÓN RESPECTO A CADA CLUSTER:\n",
     "\n",
-    "CLUSTER 0 : Clientes con poco BALANCE, baja BALANCE_FREQUENCY, bajo CREDIT_LIMIT y bajo PAYMENTS.\n",
+    "CLUSTER 0 : Clientes con poco BALANCE, baja BALANCE_FREQUENCY (si bien con gran desviación estándar), bajo CREDIT_LIMIT y bajo PAYMENTS.\n",
     "\n",
-    "Esto es, son clientes cuyo balance es bajo y que no cambia con frecuencia a lo largo del tiempo, además de tener poco límite de crédito y un monto pequeño de pagos realizados. Se podría decir que son clientes poco activos y quizás no muy pudientes económicamente.\n",
+    "Esto es, son clientes cuyo balance es bajo y que puede o no cambiar a lo largo del tiempo, además de tener poco límite de crédito y un monto pequeño de pagos realizados. Se podría decir que son clientes poco activos y quizás no muy pudientes económicamente.\n",
     "\n",
     "Cluster 1 : Clientes con alto PURCHASES, ONEOFF_PURCHASES, INSTALLEMNTS_PURCHASES, PURCHASES_FREQUENCY, ONEOFF_PURCHASES_FREQUENCY, PURCHASE_INSTALLMENTS_FREQUENCY, PURCHASES_TRX y TENURE.\n",
     "\n",
